WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212336
[LFC][TFC] Ignore section borders even when border collapse is off.
https://bugs.webkit.org/show_bug.cgi?id=212336
Summary
[LFC][TFC] Ignore section borders even when border collapse is off.
alan
Reported
2020-05-24 09:22:37 PDT
apparently section borders are just ignored.
Attachments
Patch
(5.31 KB, patch)
2020-05-24 09:24 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-05-24 09:24:07 PDT
Created
attachment 400164
[details]
Patch
EWS
Comment 2
2020-05-24 10:15:27 PDT
Committed
r262109
: <
https://trac.webkit.org/changeset/262109
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400164
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-24 10:16:15 PDT
<
rdar://problem/63580221
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug