[LFC][TFC] Ignore section borders even when border collapse is off. https://bugs.webkit.org/show_bug.cgi?id=212336

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/layoutformattingcontext/table-simple-thead-border-ignore.html

* layout/Verification.cpp:
(WebCore::Layout::outputMismatchingBlockBoxInformationIfNeeded):
* layout/tableformatting/TableFormattingContext.cpp:
(WebCore::Layout::TableFormattingContext::setUsedGeometryForSections):

LayoutTests:

* fast/layoutformattingcontext/table-simple-thead-border-ignore-expected.html: Added.
* fast/layoutformattingcontext/table-simple-thead-border-ignore.html: Added.


Canonical link: https://commits.webkit.org/225172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262109 268f45cc-cd09-0410-ab3c-d52691b4dbfc